# Raytracer

./: .gitignore  20 x 10_pixelAverage_100_reflects_50.ppm  200 x 100_pixelAverage_100_reflects_50.ppm  Aabb.cpp  Aabb.h  Bvh.cpp  Bvh.h  CMakeLists.txt  Camera.cpp  Camera.h  Dielectric.cpp  Dielectric.h  Header.h  Hitable.h  HitableList.cpp  HitableList.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h  README.md  Ray.h  Raytracer.sln  Raytracer.vcxproj  Raytracer.vcxproj.filters  Sphere.cpp  Sphere.h  TaskClock.h  Triangle.cpp  Triangle.h  Utilities.cpp  Utilities.h  main.cpp  premake5.lua  vec3aliases.h
Raytracer/: 100 x 100_spp_5_reflects_50.ppm  Raytracer.vcxproj  Raytracer.vcxproj.filters
include/: aabb.h  camera.h  diffuselight.h  hitable.h  hitablelist.h  lambertian.h  material.h  metal.h  scenes.h  sphere.h  texture.h  timer.h  triangle.h  utilities.h
include/display/: imagedisplay.h
libs/pge/: olcPixelGameEngine.h
src/: aabb.cpp  bvh.cpp  camera.cpp  dielectric.cpp  hitablelist.cpp  lambertian.cpp  main.cpp  mesh.cpp  metal.cpp  plane.cpp  sphere.cpp  triangle.cpp  utilities.cpp
src/include/: bvh.h  dielectric.h  hitablelist.h  material.h  mesh.h  metal.h  plane.h  ray.h  timer.h  utilities.h  vec3aliases.h
src/include/display/: imagedisplay.h
